# aln-quantumsynergy-pos-vm-amazon

./: Cargo.toml  README.md  aln.config.json
config/: homedir_map.yaml  quantum_pos_terminal.yaml  vm_amazon.yaml
contracts/: vm_amazon_bridge.aln
examples/: boot_ampm_verifone.rs
scripts/: deploy_static_aln_contract.sh
src/: main.rs
src/aln/: connection_framework.rs
src/util/: logging.rs
